# clean-architeture-python

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run.py
database/: base.sql
src/data/interfaces/: repository.py
src/data/usecases/: user_finder.py  users_finder.py  users_insert.py
src/domain/usecases/: user_finder.py  user_insert.py
src/errors/: exceptions.py  handler.py
src/infra/db/entities/: users.py
src/infra/db/models/: users.py
src/infra/db/repositories/: users.py
src/infra/db/settings/: connection.py
src/main/adapters/: request.py
src/main/composers/: user_finder.py  user_insert.py
src/main/routes/: routes.py
src/main/server/: server.py
src/presentation/controllers/: user_finder.py  user_insert.py
src/validators/: user_finder.py  user_insert.py
tests/data/usecases/: conftest.py  test_users.py
tests/infra/db/settings/: test_connection.py
tests/infra/repositories/: test_users.py
tests/presentation/controllers/: conftest.py  test_user_finder.py
tests/validators/: test_user_finder.py  test_user_insert.py
